<resources>
    <string name="app_name">FragmentsLifecycle</string>
    <string name="android_test">ANDROID TEST</string>
    <string name="lifecycle_test">LIFECYCLE TEST</string>
    <string name="display_text_box">Display Text Box</string>
    <string name="copy_text">Copy Text</string>
    <string name="enter_the_text_here">Enter the text here</string>
    <string name="intent_test">INTENT TEST</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_class">Enter class</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_height">Enter Height</string>
    <string name="submit">Submit</string>
    <string name="intent_display">%s\'s age is %d years and height is %.2f feet and he studies in %dth class.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_test">FRAGMENT TEST</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="test_lifecycle">Lifecycle Test</string>
    <string name="test_fragment">Fragment Test</string>
    <string name="test_intent">Intent Test</string>
    <string name="back" />
    <string name="reset">Reset</string>
    <string name="dialog_box">Dialog Box</string>
</resources>