<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextInput"
            style="@style/TextDisplayGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:ems="15"
            android:hint="@string/enter_the_text_here"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewDisplay"
            style="@style/TextDisplayGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ems="15"
            android:padding="10dp"
            android:text="@string/display_text_box"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLifecycle"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/purple_500"
            android:ems="15"
            android:text="@string/copy_text" />

        <Button
            android:id="@+id/buttonDialog"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="15"
            android:backgroundTint="@color/purple_500"
            android:layout_marginHorizontal="100dp"
            android:text="@string/dialog_box" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>